add farmer affiliations

--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/index.js",
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon src/index.js",
+    "sync-users": "node src/utils/syncUsersFromFarmers.js",
+    "setup": "npx typeorm-ts-node-commonjs migration:run -d src/data-source.js && node src/utils/syncUsersFromFarmers.js",
+    "start:full": "npm run setup && node src/index.js"
   },
   "keywords": [],
   "author": "",
@@ -26,6 +29,7 @@
     "wellknown": "^0.5.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "ts-node": "^10.9.2"
   }
 }
