--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
 JWT_SECRET=mySuperSecretKey
 # JWT_SECRET=
+
+# Sentinel Hub API credentials
+SENTINEL_HUB_CLIENT_ID=0e14ec1a-912e-47b4-9d3d-4838fb8a4f64
+SENTINEL_HUB_CLIENT_SECRET=M9yYtA5m65qr1t7c2pEEczwERGidF6gr
