--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
   "description": "",
   "dependencies": {
     "@turf/turf": "^7.2.0",
+    "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "express": "^4.21.2",
+    "jimp": "^0.22.10",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.13.3",
