--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ JWT_SECRET=mySuperSecretKey
 # Sentinel Hub API credentials
 SENTINEL_HUB_CLIENT_ID=0e14ec1a-912e-47b4-9d3d-4838fb8a4f64
 SENTINEL_HUB_CLIENT_SECRET=M9yYtA5m65qr1t7c2pEEczwERGidF6gr
+# OpenWeatherMap API Key
+OPENWEATHER_API_KEY=e207f212890f4e470757e9cb8b668ebd
